[NNO-8990] Реализация out маппинга вложенных полей